methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:4: error: illegal start of simple pattern
 for(<-1 to 6) {
     ^MethodsReturning:14: error: '<-' expected but '}' found.
      } 
      ^